--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Generate massive amounts of fake contextual data",
   "version": "4.2.0",
   "contributors": [
-    "Marak Squires <marak.squires@gmail.com>"
+    "Marak Squires <marak.squires@gmail.com>",
     "Sadra Isapanah Amlashi <sadra@isapanah.com>"
   ],
   "repository": {
