--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "faker",
+  "name": "faker-man",
   "description": "Generate massive amounts of fake contextual data",
   "version": "4.2.0",
   "contributors": [
@@ -8,7 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:sadra/faker.js.git"
+    "url": "git@github.com:sadra/faker-man.git"
   },
   "scripts": {
     "lint": "node_modules/.bin/jshint ./lib --config ./.jshintrc",
